--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <div class="media">
                     <div class="layer">
                         <p><a href="./PResources/ICT JML Flowchart.pdf" target="_blank"><strong>ICT JML Flowchart</strong></a><br>
-                           <a href="./PResources/Scenario Framework .pdf" target="_blank"><strong>Supergroup Scenario Framework</strong></a><br>
+                    
                            </p>
                       </div>
                     <img src="./Pimages/paper.jpg" alt="Document"width="250" height="350" />
@@ -113,7 +113,7 @@
                 
                 <div class="media">
                     <div class="layer">
-                        <p><a href="https://docs.google.com/spreadsheets/d/1kfny3-C8jIMx3cWB5Y19oBoxgfRmlGXjIc6kBdLFcAY/edit?gid=0#gid=0&range=A1:F1" target="_blank"><strong>Google Live Spreadsheet</strong></a><br>
+                        <p><a href="./PResources/Scenario Framework .pdf" target="_blank"><strong>Supergroup Scenario Framework</strong></a><br>
                           </p>
                       </div>
                     <img src="./Pimages/design.jpg" alt="Document"width="250" height="250" />
