Added  how to navigate

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a href="#links"  class="myTopButton">Links</a>
       </li>
        <li class="nav-item">
-        <a href="#learn"  class="myTopButton">Video</a>
+        <a href="#learn"  class="myTopButton">Video's</a>
       </li>
       <li class="nav-item">
           <a href="#docs"  class="myTopButton">Documents</a>
