added line brakes

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     
     <h3 class="content__START ">Recommended Resources and Training</h3>
     <!--<h3 class="intro2"><span class="HOW" ><strong>Knowledge</strong></span> is power,   <span class="HOW" ><strong>learning</strong></span> a previlege!</h3>-->
-    <h3 class="content__subtitle" style="text-align: left;">This web page contains informative resources related to your business solution. <br>
-        <strong>How to navigate to content: </strong><br>
+    <h3 class="content__subtitle" style="text-align: left;">This web page contains informative resources related to your business solution. <br><br>
+        <strong>How to navigate to content: <br><br>
         <ol>
             <li>Navigate to one of the available sections presented on the top menu.</li>
-            <li>Each image contains a resource or list of resources that can be selected from the overlay, when you hover over a picture. </li>
+            <li>Each image contains a resource, or list of resources, that can be selected from the overlay when you hover over a picture. </li>
             <li>Select a resource and enjoy the content!</li>
-        </ol>
+        </ol></strong>
     </h3>
     <h3></h3>
     
