--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
      
         <div id="links" class="top-container" style="padding-top: 40px;">
             <br><h2 class="content__START "><span class="HOW" style="text-align: left;"><strong>Useful Links</strong></span> </h2>  
-            <h4 class="content__subtitle" style="text-align: left; font-size: large;"><strong>How to get 3CX certified... <br><br>
+            <h4 class="content__subtitle" style="text-align: left; font-size: large;"><strong>Want to get 3CX certified? <br><br>
             <ol>
-                <li>Sign up for a free 3CX account</li>
-                <li>From the 3CX Portal, access the certification courses</li>
+                <li>Sign up for a free 3CX account.</li>
+                <li>From the 3CX Portal, access the certification courses.</li>
                 <li>Take the 3CX Basic Certification Exam!</li>
             </ol></strong></h4>  
             <h5 class="content__subtitle" style="text-align: left; font-size: medium;"><strong><em>This section includes links to get started with 3CX </em></strong></h5>  
