footer changed from 'Projects' to 'Solutions'

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
          <footer class="navbar navbar-default wh_footer">
           <div class=" footer-container mx-auto ">
               <div>
-                <img  style="font-size: 20px;" src="./Pimages/ictglobe.png" alt="ICTLabs" width="100px" hight="5px" > <strong>Projects made easy</strong>
+                <img  style="font-size: 17px;" src="./Pimages/ictglobe.png" alt="ICTLabs" width="100px" hight="5px" > <strong>Solutions made easy</strong>
               </div>
           </div>
           </footer>
