--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
      
         <div id="links" class="top-container" style="padding-top: 40px;">
             <br><h2 class="content__START "><span class="HOW" style="text-align: left;"><strong>Useful Links</strong></span> </h2> 
-            <h5 class="content__subtitle" style="text-align: left; font-size: medium;"><strong><em>This section includes links to get you started with 3CX. </em></strong></h5>   
-            <h4 class="content__subtitle" style="text-align: left; font-size: large;"><strong>Want to get 3CX certified? <br><br>
+            <h3 class="content__subtitle" style="text-align: left; font-size: medium;">This section includes links to get you started with 3CX.</h3>   
+            <h3 class="content__subtitle" style="text-align: left; font-size: large;"><strong>Want to get 3CX certified? <br><br>
             <ol>
                 <li>Sign up for a free 3CX account.</li>
                 <li>From the 3CX Portal, access the certification courses.</li>
                 <li>Take the 3CX Basic Certification Exam!</li>
-            </ol></strong></h4>  
+            </ol></strong></h3>  
             
               <div class="wrapper">
                     <div class="media">
