added doc password

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <section class="content" id="project">
     
-    <h3 class="content__START ">Recommended Resources and Training</h3>
+    <h3 class="content__START2">Recommended Resources and Training</h3>
     <!--<h3 class="intro2"><span class="HOW" ><strong>Knowledge</strong></span> is power,   <span class="HOW" ><strong>learning</strong></span> a previlege!</h3>-->
     <h3 class="content__subtitle" style="text-align: left;">This web page contains informative resources related to your business solution. <br><br>
         <strong>How to navigate to content: <br><br>
@@ -104,7 +104,7 @@
    </section>
 
         <div id="docs" class="top-container" style="padding-top: 40px;">
-          <br><h2 class="content__START "><span class="HOW" style="text-align: left;"><strong>Documents and Diagrams</strong></span> </h2>  
+          <br><h2 class="content__START"><span class="HOW" style="text-align: left;"><strong>Documents and Diagrams</strong></span> </h2>  
           <h4 class="content__subtitle" style="text-align: left; font-size: medium;"><strong>*Some documents may be protected, passwords can be obtained from your line manager.</strong></h4>  
             <div class="wrapper">
                   <div class="media">
@@ -126,7 +126,7 @@
 
                 <div class="media">
                     <div class="layer">
-                        <p><a href="./PResources/SG Implementation [V6].pdf#toolbar=0" target="_blank"><strong>WAN & Voice Project Implementation</strong></a><br>
+                        <p><a href="./PResources/SG Implementation [V7].pdf#toolbar=0" target="_blank"><strong>WAN & Voice Project Implementation</strong></a><br>
                             <!--<a href="" target="_blank"><strong>URL Related to Project</strong></a></p>-->
                       </div>
                     <img src="./Pimages/paper.jpg" alt="Document"width="250" height="350" />
