--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 
                 <div class="media">
                     <div class="layer">
-                        <p><a href="./PResources/Scenario Framework .pdf" target="_blank"><strong>Supergroup Scenario Framework</strong></a><br>
+                        <p><a href="./PResources/Scenario Framework .pdf" target="_blank"><strong>Scenario Frameworks</strong></a><br>
                           </p>
                       </div>
                     <img src="./Pimages/design.jpg" alt="Document"width="250" height="250" />
@@ -124,7 +124,7 @@
 
                 <div class="media">
                     <div class="layer">
-                        <p><a href="./PResources/SG Implementation [V7].pdf#toolbar=0" target="_blank"><strong>WAN & Voice Project Implementation</strong></a><br>
+                        <p><a href="./PResources/SG Implementation [V7].pdf#toolbar=0" target="_blank"><strong>Project Implementation</strong></a><br>
                             <!--<a href="" target="_blank"><strong>URL Related to Project</strong></a></p>-->
                       </div>
                     <img src="./Pimages/paper.jpg" alt="Document"width="250" height="350" />
