Updated.... How to...

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <strong>How to navigate to content: </strong><br><br>
         <ol>
             <li  style="padding: 0.2rem 0 0 0.5rem;">Navigate to one of the available sections presented on the top menu.</li>
-            <li  style="padding: 0.2rem 0 0 0.5rem;">Each image contains a resource, or list of resources, that can be selected from the overlay when you hover over a picture. </li>
+            <li  style="padding: 0.2rem 0 0 0.5rem;">Each image contains a resource, or list of resources, that can be selected from each ppicture. </li>
             <li  style="padding: 0.2rem 0 0 0.5rem;"> Select a resource and enjoy the content!</li>
         </ol>
     </h3>
