--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <li style="padding: 0.2rem 0 0 0.5rem;">Sign up for a free 3CX account.</li>
                 <li style="padding: 0.2rem 0 0 0.5rem;">From the 3CX Portal, access the certification courses.</li>
                 <li style="padding: 0.2rem 0 0 0.5rem;">Take the 3CX Basic Certification Exam.</li>
-                <li style="padding: 0.2rem 0 0 0.5rem;"></li>Pass the Basic Certification Exam.</li>
+                <li style="padding: 0.2rem 0 0 0.5rem;">Pass the Basic Certification Exam.</li>
             </ol></h3>  
 
   
