--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="media">
                     <div class="layer">
-                        <p><a href="./PResources/SG Implementation [V10].pdf#toolbar=0" target="_blank"><strong>Project Implementation</strong></a><br>
+                        <p><a href="./PResources/SG Implementation [V11].pdfpdf#toolbar=0" target="_blank"><strong>Project Implementation</strong></a><br>
                             <!--<a href="" target="_blank"><strong>URL Related to Project</strong></a></p>-->
                       </div>
                     <img src="./Pimages/paper.jpg" alt="Document"width="250" height="350" />
